# pSync

./: LICENSE.txt  NOTE_ja.md  NOTE_jp.md  README.md  README_en.md  README_ja.md  README_jp.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  codeql-analysis.yml  release.yml
doc/: DEV_ja.md  NOTE_ja.md
psync-2.2/: Makefile.in  README.txt  configure  main.c  popen3.c  popen3.h  psync.c  psync.conf.5  psync.h  psync_psp1.c
psync-2.3/: Makefile.in  configure  main.c  psync.1  psync.c  psync_psp1.c  psync_psp1.h
psync-2.4/: Makefile.in  configure  main.c  psync.c  psync_psp1.c
psync-2.5/: Makefile.in  README.txt  config.h.in  configure  main.c  psync.1  psync_psp1.c
src/: Makefile.in  README.txt  common.c  common.h  config.h.in  configure  configure.ac  info.c  info.h  main.c  popen3.c  popen3.h  progress.c  progress.h  psync.c  psync.h  psync_psp.c  psync_psp.h  psync_psp1.c  psync_psp1.h  psync_utils.h  tpbar.c  tpbar.h
src/ja/: psync.1  psync.1.in  psync.conf.5  psync.conf.5.in
